# bache-thesis-python

./: .gitignore  README.md  add_kilometre.py  convert_KMtoMetre.py  excute_BPF.py  gps_time_integration.py  output_runcurve.py  practice_BPF.py  pyproject.toml  test_fft.py  インタラクティブ - gps_time_integration.py.ipynb  インタラクティブ - output_runcurve.py.ipynb
analysis/: TRVdata_fft.py  TRVdata_resample.py  git-error-1728402531243  インタラクティブ - TRVdata_resample.py.ipynb
bache_thesis_python/: __init__.py  fft.py  filter_function.py  practice-folium.py  resample.py  インタラクティブ - practice-folium.py.ipynb
gps_smartphone_data_matching/: convert_KMtoMetre.py  gps_time_integration.py  output_runcurve.py
matlab_analysis/: TGDTA_PSD.m  bandpass_filter.m  fft_TDATA.m  resample_test.m
utils/: TRVdata_fft.py
